--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -939,3 +939,12 @@ span {
   text-decoration: none;
   color: grey;
 }
+
+.but {
+  background-color: rgb(0, 183, 255);
+  color: rgb(255, 255, 255);
+  padding: 1px 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
