--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -968,3 +968,20 @@ span {
   max-width: 100%;
   height: auto;
 }
+.button-container {
+  text-align: center;
+}
+
+.medium-button {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 10px 5px;
+  cursor: pointer;
+  border-radius: 5px;
+}
